# philosophers

./: CMakeLists.txt  Makefile  a.out  philo
42_libft/: Makefile  libft.h
src/: actions.c  big_brother.c  finish.c  main.c  philo.c  philo.h  time.c  validation.c
